--- a/Tokunaga_Freesia_progress_memo_1.html
+++ b/Tokunaga_Freesia_progress_memo_1.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Freesia Tokunaga">
-<meta name="dcterms.date" content="2023-10-11">
+<meta name="dcterms.date" content="2023-10-29">
 
 <title>Progress Memo 1</title>
 <style>
@@ -3022,7 +3022,7 @@ Data Science 1 with R (STAT 301-1)</p><p></p>
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">October 11, 2023</p>
+      <p class="date">October 29, 2023</p>
     </div>
   </div>
   
@@ -3056,27 +3056,12 @@ Github Repo Link
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>To link to your github <strong>repo</strong>sitory, appropriately edit the example link below. Meaning replace <code>https://your-github-repo-url</code> with your github repo url. Suggest verifying the link works before submitting.</p>
-<p><a href="https://your-github-repo-url">https://your-github-repo-url</a></p>
-</div>
-</div>
-<div class="callout callout-style-default callout-warning callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-Warning
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>GitHub (free account) cannot store large files. If you try to commit and push a large dataset you will have an ERROR! Any file over 100 MB (100,000 KB) needs to be added to the <code>.gitignore</code> file BEFORE committing.</p>
-<p><strong>We may need to do that for files in your final project!</strong></p>
+<p><a href="https://github.com/stat301-1-2023-fall/final-project-1-freesiat.git">https://github.com/stat301-1-2023-fall/final-project-1-freesiat.git</a></p>
 </div>
 </div>
 <section id="data-source" class="level2">
 <h2 class="anchored" data-anchor-id="data-source">Data source</h2>
-<p>Blah blah blah<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
+<p>I will be using 3 datasets from gapminder, which contain information about the government health spending as a percentage of the total government spending, government health spending per person in US dollars, and the out of pocket share of total health spending<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
 </section>
 <section id="why-this-data" class="level2">
 <h2 class="anchored" data-anchor-id="why-this-data">Why this data</h2>
@@ -3099,7 +3084,7 @@ Warning
 <div id="quarto-appendix" class="default"><section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes"><h2 class="anchored quarto-appendix-heading">Footnotes</h2>
 
 <ol>
-<li id="fn1"><p>where blah blah came from, an example of footnote<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn1"><p>https://www.gapminder.org/data/, FREE DATA FROM WORLD BANK VIA GAPMINDER.ORG, CC-BY LICENSE<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 <li id="fn2"><p>another footnote<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section></div></main>
