--- a/Tokunaga_Freesia_progress_memo_1.html
+++ b/Tokunaga_Freesia_progress_memo_1.html
@@ -3032,20 +3032,6 @@ Data Science 1 with R (STAT 301-1)</p><p></p>
 
 </header>
 
-<div class="callout callout-style-default callout-important callout-titled">
-<div class="callout-header d-flex align-content-center">
-<div class="callout-icon-container">
-<i class="callout-icon"></i>
-</div>
-<div class="callout-title-container flex-fill">
-Memo format
-</div>
-</div>
-<div class="callout-body-container callout-body">
-<p>Like all other submissions for this course, we expect the memo to be neat and well organized.</p>
-<p>You should make this document your own. This is a template. To help with this we have added a date to the yaml above (good whenever writing memos). You should remove this block when making this document your own.</p>
-</div>
-</div>
 <div class="callout callout-style-default callout-tip no-icon callout-titled">
 <div class="callout-header d-flex align-content-center">
 <div class="callout-icon-container">
@@ -3061,23 +3047,107 @@ Github Repo Link
 </div>
 <section id="data-source" class="level2">
 <h2 class="anchored" data-anchor-id="data-source">Data source</h2>
-<p>I will be using 3 datasets from gapminder, which contain information about the government health spending as a percentage of the total government spending, government health spending per person in US dollars, and the out of pocket share of total health spending<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
+<p>I will be using 3 datasets from gapminder, which contain information about the government health spending as a percentage of the total government spending, government health spending per person in US dollars, the out of pocket share of total health spending across the world, and the infant mortality rate per 1000 births<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
 </section>
 <section id="why-this-data" class="level2">
 <h2 class="anchored" data-anchor-id="why-this-data">Why this data</h2>
-<p>Blah blah blah<a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></p>
+<p>I chose this data because as a global health major, I am very interested in how governmental financial invenstment into healthcare and financial barriers affect health outcomes for the population. More specifically, I hope to investigate the correlation between infant mortality rate and government health spending, as well as the out-of-pocket healthcare share. Many expecting mothers are unable to seek maternal care throughout their pregnancy due to health costs, resulting in complications during birth or offspring that are unable to survive due to complications that could have been foreseen if the mother could have accessed screening services. Therefore, my initial general hypothesis is that the smaller the government spending and the larger the out of pocket share of healthcare cost, the higher the infant mortality rate.</p>
 </section>
 <section id="data-quality-complexity-check" class="level2">
 <h2 class="anchored" data-anchor-id="data-quality-complexity-check">Data quality &amp; complexity check</h2>
-<p>Blah blah blah</p>
+<div class="cell">
+<div class="cell-output cell-output-stdout">
+<pre><code># A tibble: 17 × 3
+   variable n_miss pct_miss
+   &lt;chr&gt;     &lt;int&gt;    &lt;dbl&gt;
+ 1 2010          5    2.60 
+ 2 1995          3    1.56 
+ 3 1996          2    1.04 
+ 4 1997          2    1.04 
+ 5 2002          2    1.04 
+ 6 2003          2    1.04 
+ 7 2004          2    1.04 
+ 8 2005          2    1.04 
+ 9 2006          2    1.04 
+10 2007          2    1.04 
+11 2008          2    1.04 
+12 2009          2    1.04 
+13 1998          1    0.521
+14 1999          1    0.521
+15 2000          1    0.521
+16 2001          1    0.521
+17 country       0    0    </code></pre>
+</div>
+<div class="cell-output cell-output-stdout">
+<pre><code># A tibble: 17 × 3
+   variable n_miss pct_miss
+   &lt;chr&gt;     &lt;int&gt;    &lt;dbl&gt;
+ 1 2010          5    2.60 
+ 2 1995          3    1.56 
+ 3 1996          2    1.04 
+ 4 1997          2    1.04 
+ 5 2000          2    1.04 
+ 6 2002          2    1.04 
+ 7 2003          2    1.04 
+ 8 2004          2    1.04 
+ 9 2005          2    1.04 
+10 2006          2    1.04 
+11 2007          2    1.04 
+12 2008          2    1.04 
+13 2009          2    1.04 
+14 1998          1    0.521
+15 1999          1    0.521
+16 2001          1    0.521
+17 country       0    0    </code></pre>
+</div>
+<div class="cell-output cell-output-stdout">
+<pre><code># A tibble: 17 × 3
+   variable n_miss pct_miss
+   &lt;chr&gt;     &lt;int&gt;    &lt;dbl&gt;
+ 1 1995          3    2    
+ 2 1996          2    1.33 
+ 3 1997          2    1.33 
+ 4 2001          2    1.33 
+ 5 2002          2    1.33 
+ 6 2003          2    1.33 
+ 7 2004          2    1.33 
+ 8 2005          2    1.33 
+ 9 2006          2    1.33 
+10 2007          2    1.33 
+11 2008          2    1.33 
+12 2009          2    1.33 
+13 2010          2    1.33 
+14 1998          1    0.667
+15 1999          1    0.667
+16 2000          1    0.667
+17 country       0    0    </code></pre>
+</div>
+<div class="cell-output cell-output-stdout">
+<pre><code># A tibble: 217 × 3
+   variable n_miss pct_miss
+   &lt;chr&gt;     &lt;int&gt;    &lt;dbl&gt;
+ 1 1800        205     99.5
+ 2 1801        205     99.5
+ 3 1802        205     99.5
+ 4 1803        205     99.5
+ 5 1804        205     99.5
+ 6 1805        205     99.5
+ 7 1806        204     99.0
+ 8 1807        204     99.0
+ 9 1808        204     99.0
+10 1809        204     99.0
+# ℹ 207 more rows</code></pre>
+</div>
+</div>
+<p>All the data sets have only numerical variables, except for the initial column which is the country name since each consecutive column after that represents a year. There are a handful of missing values for each year for each data set, but it is a small percentage. There are 192 observations for 17 variables in the gov spending and gov spending per person data sets, however, there are 206 observations for 217 variables for infant mortality rate.</p>
 </section>
 <section id="potential-data-issues" class="level2">
 <h2 class="anchored" data-anchor-id="potential-data-issues">Potential data issues</h2>
-<p>Blah blah blah</p>
+<p>Since I will be merging 4 datasets with differing number of variables (years), I will need to select only the variables(years) that the datasets have in common. I will have to use pivot_longer() to create a new column indicating the type of data the numerical value is (e.g. government health spending percentage, infant mortality rate, etc) to differenciate between the columns of each data set, since as of now, they all have the same name (the year).</p>
 </section>
 <section id="misc" class="level2">
 <h2 class="anchored" data-anchor-id="misc">Misc</h2>
-<p>Blah Blah</p>
+<p>I plan to begin merging the data sets by taking the common years, and then I will begin the EDA by examining the correlation coefficient between the variables by the end of this week.</p>
 </section>
 
 
@@ -3085,7 +3155,6 @@ Github Repo Link
 
 <ol>
 <li id="fn1"><p>https://www.gapminder.org/data/, FREE DATA FROM WORLD BANK VIA GAPMINDER.ORG, CC-BY LICENSE<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
-<li id="fn2"><p>another footnote<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
 </ol>
 </section></div></main>
 <!-- /main column -->
